[gd_scene load_steps=10 format=3 uid="uid://ba52freryk52u"]

[ext_resource type="Script" path="res://Main/HUD.gd" id="1_wvl6r"]
[ext_resource type="Texture2D" uid="uid://bwlnfswuxlfsi" path="res://Main/Assets/hp_and_rp_frame_empty.png" id="2_4avyd"]
[ext_resource type="Texture2D" uid="uid://yll7j1xw284s" path="res://Main/Assets/fill_red.png" id="3_g7j6a"]
[ext_resource type="Texture2D" uid="uid://be733nm136637" path="res://Main/Assets/fill_purple.png" id="4_gyr8h"]
[ext_resource type="Texture2D" uid="uid://c5dkvbixj8f6e" path="res://icon.svg" id="4_theae"]
[ext_resource type="Texture2D" uid="uid://dvbcfy3cronkn" path="res://Main/Assets/levelup_badge_bottom_middle.png" id="5_kwr36"]
[ext_resource type="Script" path="res://Main/UpgradeButton.gd" id="5_y77ts"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2jrip"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ewrrw"]
content_margin_top = 20.0

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_wvl6r")

[node name="HealthBarContainer" type="PanelContainer" parent="."]
y_sort_enabled = true
offset_left = 10.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 40.0

[node name="NinePatchRect" type="NinePatchRect" parent="HealthBarContainer"]
y_sort_enabled = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_4avyd")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="HealthBarContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PlayerHealthBar" type="TextureProgressBar" parent="HealthBarContainer/MarginContainer"]
y_sort_enabled = true
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_progress = ExtResource("3_g7j6a")

[node name="ExpBarContainer" type="PanelContainer" parent="."]
y_sort_enabled = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1200.0
offset_top = -25.0
offset_right = 1200.0
grow_horizontal = 2
grow_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="ExpBarContainer"]
y_sort_enabled = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_4avyd")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="ExpBarContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PlayerExpBar" type="TextureProgressBar" parent="ExpBarContainer/MarginContainer"]
y_sort_enabled = true
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_progress = ExtResource("4_gyr8h")

[node name="LevelDisplayContainer" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -93.0
offset_right = -20.0
offset_bottom = 110.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_2jrip")

[node name="MarginContainer" type="MarginContainer" parent="LevelDisplayContainer"]
z_index = 2
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 35

[node name="LevelDisplay" type="RichTextLabel" parent="LevelDisplayContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ewrrw")
bbcode_enabled = true
text = "40
"

[node name="TextureRect" type="TextureRect" parent="LevelDisplayContainer"]
layout_mode = 2
texture = ExtResource("5_kwr36")
expand_mode = 1

[node name="UpgradeChoices" type="Panel" parent="."]
process_mode = 2
visible = false
offset_left = -20.0
offset_right = 2380.0
offset_bottom = 1200.0

[node name="Label" type="Label" parent="UpgradeChoices"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeChoices"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -626.5
offset_top = -354.0
offset_right = 626.5
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="UpgradeChoices/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"
icon = ExtResource("4_theae")
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("5_y77ts")

[node name="Button2" type="Button" parent="UpgradeChoices/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "TEST"
icon = ExtResource("4_theae")
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("5_y77ts")

[node name="Button3" type="Button" parent="UpgradeChoices/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "test"
icon = ExtResource("4_theae")
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("5_y77ts")
